Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -35,9 +35,13 @@
         <h1>Anthony J Ugo</h1>
         <hr size="8px" color="black">
         <h2> Summary</h2>
-        <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
+        <p>Originator/Inventor: Ambient Folk Genre & Concept.  Pulse-Phase-Strum Guitar Technique.  
+            Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics. 
+            Founder & Owner of ambientfolk.com<p>
+            
+      <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
             sensibility with an integral business approach, grounded in full spectrum life experience. Proficient in multiple frameworks &
-            technologies; adept at acquiring new skills.  Industrious team player inspired by the information age.</p>
+            technologies; adept at acquiring new skills.  Industrious visionary inspired by the information age.</p>
        
     <ul id="summaryskills">
 
@@ -60,7 +64,7 @@
 
         <p><span class="company">Ambient Folk.com</span>
             <br>
-        <span class="place">Chicago, IL</span>
+        <span class="place">Orland Park, IL</span>
                 <span class="year"><i>2021 - Present</i></span>
                 <br>
                 <span class="job">World Class Music, Art & Writing Project</span></p>
@@ -74,7 +78,7 @@
 
         <p><span class="company">Masterwork Mill</span>
             <br>
-        <span class="place">Chicago, IL</span>
+        <span class="place">Orland Park, IL</span>
                 <span class="year"><i>2020 - Present</i></span>
                 <br>
                 <span class="job">Owner, Producer, Engineer, Designer</span></p>
