Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -35,8 +35,8 @@
         <h1>Anthony J Ugo</h1>
         <hr size="8px" color="black">
         <h2> Summary</h2>
-        <p>Originator/Inventor: Ambient Folk Genre & Concept.  Pulse-Phase-Strum Guitar Technique.  
-            Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics. 
+        <p>Originator/Inventor: Ambient Folk Genre & Concept.  Pulse-Phase-Strum Guitar Technique.<br>  
+            Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics.<br> 
             Founder & Owner of ambientfolk.com<p>
             
       <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
