Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -36,7 +36,8 @@
         <hr size="8px" color="black">
         <h2> Summary</h2>
         <p>Originator/Inventor: Ambient Folk Genre & Concept.  Pulse-Phase-Strum Guitar Technique.<br>  
-            Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics.<br> 
+            Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics.<br>
+            Writing: Codex Weave Writing Technique.<br>
             Founder & Owner of ambientfolk.com<p>
             
       <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
@@ -88,7 +89,7 @@
                   <li><i>Operation of recording studio</i></li>
                   <li><i>Production, mixing, engineering & mastering of sound recordings</i></li>
                   <li><i>Graphics & logos</i></li>
-                  <li><i>Mastering & formating of digital artwork for print</i></li>
+                  <li><i>Mastering & formatting of digital artwork for print</i></li>
                   <li><i>Product marketing &  development</i></li>
                 </ul>
                 </div>
