--- a/resume .html
+++ b/resume .html
@@ -37,7 +37,7 @@
         <h2> Summary</h2>
         <p>Originator/Inventor: Ambient Folk Genre & Concept.  Pulse-Phase-Strum Guitar Technique.<br>  
             Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics.<br>
-            Writing: Codex Weave Writing Technique.<br>
+            Writing: Integral Psi-Fi, Codex Weave Writing Technique.<br>
             Founder & Owner of ambientfolk.com<p>
             
       <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
