Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -35,7 +35,9 @@
         <h1>Anthony J Ugo</h1>
         <hr size="8px" color="black">
         <h2> Summary</h2>
-        <p>Originator/Inventor: Ambient Folk Genre & Concept.  Pulse-Phase-Strum Guitar Technique.<br>  
+        <p>Originator/Inventor: Ambient Folk Genre & Concept.  <br>
+          <br> 
+            Music: Pulse-Phase-Strum Guitar Technique.<br>  
             Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics.<br>
             Writing: Integral Psi-Fi, Codex Weave Writing Technique.<br>
             Founder & Owner of ambientfolk.com<p>
