Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -36,11 +36,12 @@
         <hr size="8px" color="black">
         <h2> Summary</h2>
         <p>Originator/Inventor: Ambient Folk Genre & Concept.  <br>
+           Founder & Owner of ambientfolk.com          <br> 
           <br> 
             Music: Pulse-Phase-Strum Guitar Technique.<br>  
             Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics.<br>
             Writing: Integral Psi-Fi, Codex Weave Writing Technique.<br>
-            Founder & Owner of ambientfolk.com<p>
+           <p>
             
       <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
             sensibility with an integral business approach, grounded in full spectrum life experience. Proficient in multiple frameworks &
