Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -39,7 +39,7 @@
            Founder & Owner of ambientfolk.com          <br> 
           <br> 
             Music: Pulse-Phase-Strum Guitar Technique.<br>  
-            Art: Bold Line Diaphanous, Elexpressionism, Pixoglyphic Mosaic, Phase Tide Frames, Phosphorescent Fabrics.<br>
+            Art: Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
             Writing: Integral Psi-Fi, Codex Weave Writing Technique.<br>
            <p>
             
