Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -36,7 +36,7 @@
         <hr size="8px" color="black">
         <h2> Summary</h2>
         <p>Originator/Inventor: Ambient Folk Genre & Concept.  <br>
-           Founder & Owner of ambientfolk.com          <br> 
+           Founder & Owner: ambientfolk.com          <br> 
           <br> 
             Music: Pulse-Phase-Strum Guitar Technique.<br>  
             Art: Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
