Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -35,12 +35,12 @@
         <h1>Anthony J Ugo</h1>
         <hr size="8px" color="black">
         <h2> Summary</h2>
-        <p>Originator/Inventor: Ambient Folk Genre & Concept.  <br>
+        <p>Originator/Inventor: Ambient Folk Genre & Concept  <br>
            Founder & Owner: ambientfolk.com          <br> 
           <br> 
-            Music: Pulse-Phase-Strum Guitar Technique.<br>  
-            Art: Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
-            Writing: Integral Psi-Fi, Codex Weave Writing Technique.<br>
+            </b>Music:<b></b> Pulse-Phase-Strum Guitar Technique.<br>  
+            </b>Art:<b> Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
+            <b>Writing:<b> Integral Psi-Phy, CodeX Weave Style.<br>
            <p>
             
       <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
