Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -38,9 +38,9 @@
         <p>Originator/Inventor: Ambient Folk Genre & Concept  <br>
            Founder & Owner: ambientfolk.com          <br> 
           <br> 
-            <b> Music: <b> Pulse-Phase-Strum Guitar Technique.<br>  
+            <p></p><span Class= "company" Music:</span> Pulse-Phase-Strum Guitar Technique. <br>  
             <b> Art: <b> Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
-            <b> Writing:<b> Integral Psi-Phy, CodeX Weave Style.<br>
+            <b> Writing: <b> Integral Psi-Phy, CodeX Weave Style.<br>
            <p>
             
       <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
