Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -38,7 +38,7 @@
         <p>Originator/Inventor: Ambient Folk Genre & Concept  <br>
            Founder & Owner: ambientfolk.com          <br> 
           <br> 
-            Music:  Pulse-Phase-Strum Guitar Technique. <br>  
+            <strong> Music:<strong> Pulse-Phase-Strum Guitar Technique. <br>  
             Art: Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
             Writing: Integral Psi-Phy, CodeX Weave Style.<br>
            <p>
