Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -38,9 +38,9 @@
         <p>Originator/Inventor: Ambient Folk Genre & Concept  <br>
            Founder & Owner: ambientfolk.com          <br> 
           <br> 
-            <strong> Music:<strong> Pulse-Phase-Strum Guitar Technique. <br>  
-            Art: Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
-            Writing: Integral Psi-Phy, CodeX Weave Style.<br>
+            <strong> Music:</strong> Pulse-Phase-Strum Guitar Technique. <br>  
+            <strong> Art: </strong> Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
+            <strong> Writing: </strong> Integral Psi-Phy, CodeX Weave Style.<br>
            <p>
             
       <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design and sound engineering. Combining a refined aesthetic
