Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -35,8 +35,8 @@
         <h1>Anthony J Ugo</h1>
         <hr size="8px" color="black">
         <h2> Summary</h2>
-        <p>Originator/Inventor: Ambient Folk Genre & Concept  <br>
-           Founder & Owner: ambientfolk.com          <br> 
+        <p> <i> Originator/Inventor: </i> Ambient Folk Genre & Concept  <br>
+           <i> Founder & Owner: </i> ambientfolk.com          <br> 
           <br> 
             <strong> <i> Music:</i> </strong> Pulse-Phase-Strum Guitar Technique. <br>  
             <strong> <i> Art: </i> </strong> Bold Line Diaphanous, EleXpressionism, Pixoglyphic Mosaic, Phase Tide Frames.<br>
