--- a/resume .html
+++ b/resume .html
@@ -167,8 +167,8 @@
                     third party &amp; single payer responsibility</li>
                 <li>Maintained client relations with seven hospitals; facilitated financial planning with care coordinators, social workers, hospital accounting &amp;
                     RPM office</li>
-                <li>Provided long term customer service, while implementing integrative medical and financial strategies based on patient needs.</li>      
-                <li>Screened and interviewed persons in need of medical assistance; determined eligibility for financial aid; compiled and formatted
+                <li>Provided long term customer service, while implementing integrative medical and financial strategies based on patient needs</li>      
+                <li>Screened and interviewed persons who required medical assistance; determined eligibility for financial aid; compiled and formatted
                     supporting documentation for Medicaid application process</li>
                     <li>Arranged outside funding for patient care</li>
                 </ul>
