Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -75,8 +75,8 @@
                 
            <div>
                 <ul>
-                    <li><i>Creative Director: artwork, music, text</i></li>
-                  <li><i>Integrated multimedia: web, word, art & music</i></li>
+                    <li><i>Creative Director: Music, Artwork, Text</i></li>
+                  <li><i>Integrated multimedia: Web, Memes, Image, Sound</i></li>
                 </ul>
                   </divi>
 
@@ -85,7 +85,7 @@
         <span class="place">Orland Park, IL</span>
                 <span class="year"><i>2020 - Present</i></span>
                 <br>
-                <span class="job">Owner, Producer, Engineer, Designer</span></p>
+                <span class="job">Owner, Engineer, Producer, Designer</span></p>
                 
            <div>
                 <ul>
@@ -93,7 +93,7 @@
                   <li><i>Production, mixing, engineering & mastering of sound recordings</i></li>
                   <li><i>Graphics & logos</i></li>
                   <li><i>Mastering & formatting of digital artwork for print</i></li>
-                  <li><i>Product marketing &  development</i></li>
+                  <li><i>Product development & marketing</i></li>
                 </ul>
                 </div>
 
