Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -76,7 +76,7 @@
            <div>
                 <ul>
                     <li><i>Creative Director: Music, Artwork, Text</i></li>
-                  <li><i>Integrated multimedia: Web, Memes, Image, Sound</i></li>
+                  <li><i>Integrated Multimedia: Web, Memes, Image, Sound</i></li>
                 </ul>
                   </divi>
 
