--- a/resume .html
+++ b/resume .html
@@ -71,12 +71,12 @@
         <span class="place">Orland Park, IL</span>
                 <span class="year"><i>2021 - Present</i></span>
                 <br>
-                <span class="job">World Class Music, Art & Writing Project</span></p>
+                <span class="job">Integrated Multimedia = Website/Hypertext Format as Book </span></p>
                 
            <div>
                 <ul>
-                    <li><i>Creative Director: Music, Artwork, Text</i></li>
-                  <li><i>Integrated Multimedia: Web, Memes, Image, Sound</i></li>
+                    <li><i> Art & Science = Aesthetics Engineering </i></li>
+                  <li><i></i></li>
                 </ul>
                   </divi>
 
