Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -71,12 +71,13 @@
         <span class="place">Orland Park, IL</span>
                 <span class="year"><i>2021 - Present</i></span>
                 <br>
-                <span class="job">Integrated Multimedia = Website/Hypertext Format as Book </span></p>
+                <span class="job">Integrated Multimedia = Website/Hypertext Format as Multidimesional Book </span></p>
                 
            <div>
                 <ul>
-                    <li><i> Art & Science = Aesthetics Engineering </i></li>
-                  <li><i></i></li>
+                  <li><i>Culture, Codes, Communication, Comerce</i></li> 
+                  <li><i>Performing the Notion of Context as Content</i></li>
+                  <li><i>Art & Science = Aesthetics Engineering</i></li>
                 </ul>
                   </divi>
 
