Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -91,7 +91,7 @@
            <div>
                 <ul>
                   <li><i>Operation of recording studio</i></li>
-                  <li><i>Production, mixing, engineering & mastering of sound recordings</i></li>
+                  <li><i>Engineering, production, mixing & mastering of sound recordings</i></li>
                   <li><i>Graphics & logos</i></li>
                   <li><i>Mastering & formatting of digital artwork for print</i></li>
                   <li><i>Product development & marketing</i></li>
