Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -71,7 +71,7 @@
         <span class="place">Orland Park, IL</span>
                 <span class="year"><i>2021 - Present</i></span>
                 <br>
-                <span class="job">Integrated Multimedia = Website/Hypertext Format as Multidimesional Book </span></p>
+                <span class="job">Integrated Multimedia = Website/Hypertext Format as Multidimensional Book </span></p>
                 
            <div>
                 <ul>
