Update resume .html

--- a/resume .html
+++ b/resume .html
@@ -75,7 +75,7 @@
                 
            <div>
                 <ul>
-                  <li><i>Culture, Codes, Communication, Comerce</i></li> 
+                  <li><i>Culture, Codes, Communication, Commerce</i></li> 
                   <li><i>Performing the Notion of Context as Content</i></li>
                   <li><i>Art & Science = Aesthetics Engineering</i></li>
                 </ul>
